--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
     "url": "https://github.com/NealRame/arkanoid/issues"
   },
   "homepage": "https://github.com/NealRame/arkanoid#readme",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "babel-preset-es2015": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "eslint": "^3.7.1",
+    "gulp": "^3.9.1"
+  }
 }
