--- a/package.json
+++ b/package.json
@@ -36,5 +36,41 @@
     "browserify": "^13.1.0",
     "eslint": "^3.7.1",
     "gulp": "^3.9.1"
+  },
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "ecmaFeatures": {
+      "modules": true
+    },
+    "env": {
+      "browser": true,
+      "es6": true,
+      "node": true
+    },
+    "rules": {
+      "camelcase": 0,
+      "curly": [
+        1,
+        "multi-line"
+      ],
+      "strict": [
+        2,
+        "global"
+      ],
+      "key-spacing": 0,
+      "new-cap": [
+        1,
+        {
+          "newIsCap": true,
+          "capIsNew": false
+        }
+      ],
+      "no-multi-spaces": 0,
+      "quotes": [
+        1,
+        "single"
+      ],
+      "space-infix-ops": 0
+    }
   }
 }
