--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "del": "^2.2.2",
     "eslint": "^3.7.1",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
-    "gulp-livereload": "^3.8.1"
+    "gulp-if": "^2.0.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.0.0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
