add eslint rules for module

--- a/package.json
+++ b/package.json
@@ -54,13 +54,15 @@
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
-    "ecmaFeatures": {
-      "modules": true
-    },
     "env": {
       "browser": true,
       "es6": true,
       "node": true
+    },
+    "plugins": [],
+    "parserOptions": {
+      "ecmaFeatures": {},
+      "sourceType": "module"
     },
     "rules": {
       "camelcase": 0,
