--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "$PWD/tools/scripts/build.sh",
     "dev": "$PWD/tools/scripts/dev.sh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "$PWD/tools/scripts/test.sh"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "chai": "^3.5.0",
     "del": "^2.2.2",
     "eslint": "^3.7.1",
     "gulp": "^3.9.1",
@@ -51,6 +52,8 @@
     "lodash.isnil": "^4.0.0",
     "lodash.isnumber": "^3.0.3",
     "lodash.isstring": "^4.0.1",
+    "mocha": "^3.1.2",
+    "sinon": "^1.17.6",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
