--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-webserver": "^0.9.1",
+    "lodash.cond": "^4.5.2",
+    "lodash.constant": "^3.0.0",
     "lodash.isnil": "^4.0.0",
     "lodash.isnumber": "^3.0.3",
     "lodash.isstring": "^4.0.1",
