--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lodash.isnumber": "^3.0.3",
     "lodash.isstring": "^4.0.1",
     "lodash.noop": "^3.0.1",
+    "lodash.random": "^3.2.0",
     "mocha": "^3.1.2",
     "sinon": "^1.17.6",
     "vinyl-buffer": "^1.0.0",
