--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gulp-webserver": "^0.9.1",
     "lodash.cond": "^4.5.2",
     "lodash.constant": "^3.0.0",
+    "lodash.identity": "^3.0.0",
     "lodash.isnil": "^4.0.0",
     "lodash.isnumber": "^3.0.3",
     "lodash.isstring": "^4.0.1",
