--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lodash.cond": "^4.5.2",
     "lodash.constant": "^3.0.0",
     "lodash.every": "^4.6.0",
+    "lodash.first": "^3.0.0",
     "lodash.identity": "^3.0.0",
     "lodash.isnil": "^4.0.0",
     "lodash.isnumber": "^3.0.3",
