re-organize project to manage editor

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-webserver": "^0.9.1",
+    "lodash.clamp": "^4.0.3",
     "lodash.cond": "^4.5.2",
     "lodash.constant": "^3.0.0",
     "lodash.identity": "^3.0.0",
@@ -58,6 +59,7 @@
     "lodash.noop": "^3.0.1",
     "lodash.random": "^3.2.0",
     "lodash.remove": "^4.7.0",
+    "lodash.throttle": "^4.1.1",
     "lodash.times": "^4.3.2",
     "mocha": "^3.1.2",
     "sinon": "^1.17.6",
