--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lodash.cond": "^4.5.2",
     "lodash.constant": "^3.0.0",
     "lodash.identity": "^3.0.0",
+    "lodash.isfunction": "^3.0.8",
     "lodash.isnil": "^4.0.0",
     "lodash.isnumber": "^3.0.3",
     "lodash.isstring": "^4.0.1",
