--- a/package.json
+++ b/package.json
@@ -57,12 +57,14 @@
     "lodash.isnil": "^4.0.0",
     "lodash.isnumber": "^3.0.3",
     "lodash.isstring": "^4.0.1",
+    "lodash.negate": "^3.0.2",
     "lodash.noop": "^3.0.1",
     "lodash.oversome": "^4.7.0",
     "lodash.random": "^3.2.0",
     "lodash.remove": "^4.7.0",
     "lodash.throttle": "^4.1.1",
     "lodash.times": "^4.3.2",
+    "lodash.uniq": "^4.5.0",
     "mocha": "^3.1.2",
     "sinon": "^1.17.6",
     "vinyl-buffer": "^1.0.0",
