--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   provider: script
   script: tools/scripts/deploy.sh
   on:
-    branch: master
+    tags: true
 addons:
   apt:
     packages:
