--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "chai": "^3.5.0",
+    "chalk": "^1.1.3",
     "del": "^2.2.2",
     "eslint": "^3.7.1",
     "gulp": "^3.9.1",
