--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "lodash.times": "^4.3.2",
     "lodash.uniq": "^4.5.0",
     "mocha": "^3.1.2",
+    "semver": "^5.3.0",
     "sinon": "^1.17.6",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
