--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-webserver": "^0.9.1",
+    "inquirer": "^2.0.0",
     "lodash.clamp": "^4.0.3",
     "lodash.cond": "^4.5.2",
     "lodash.constant": "^3.0.0",
