update travis config and deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   provider: script
   script: tools/scripts/deploy.sh
   on:
-    branch: release/*
+    branch: master
 addons:
   apt:
     packages:
