--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/NealRame/arkanoid#readme",
   "private": true,
   "dependencies": {
+    "async": "^2.1.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
@@ -43,15 +44,19 @@
     "chalk": "^1.1.3",
     "del": "^2.2.2",
     "eslint": "^3.7.1",
+    "front-matter": "^2.1.1",
+    "fs-extra": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
     "gulp-if": "^2.0.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-metalsmith": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-webserver": "^0.9.1",
+    "handlebars": "^4.0.6",
     "inquirer": "^2.0.0",
     "lodash.clamp": "^4.0.3",
     "lodash.cond": "^4.5.2",
@@ -70,9 +75,13 @@
     "lodash.throttle": "^4.1.1",
     "lodash.times": "^4.3.2",
     "lodash.uniq": "^4.5.0",
+    "marked": "^0.3.6",
+    "metalsmith-layouts": "^1.7.0",
+    "metalsmith-markdown": "^0.2.1",
     "mocha": "^3.1.2",
     "semver": "^5.3.0",
     "sinon": "^1.17.6",
+    "through2": "^2.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
