--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "mocha": "^3.1.2",
     "semver": "^5.3.0",
     "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "through2": "^2.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
