--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chalk": "^1.1.3",
     "del": "^2.2.2",
     "eslint": "^3.7.1",
@@ -67,11 +68,13 @@
     "lodash.isnil": "^4.0.0",
     "lodash.isnumber": "^3.0.3",
     "lodash.isstring": "^4.0.1",
+    "lodash.kebabcase": "^4.1.1",
     "lodash.negate": "^3.0.2",
     "lodash.noop": "^3.0.1",
     "lodash.oversome": "^4.7.0",
     "lodash.random": "^3.2.0",
     "lodash.remove": "^4.7.0",
+    "lodash.shuffle": "^4.2.0",
     "lodash.template": "^4.4.0",
     "lodash.throttle": "^4.1.1",
     "lodash.times": "^4.3.2",
