--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lodash.negate": "^3.0.2",
     "lodash.noop": "^3.0.1",
     "lodash.oversome": "^4.7.0",
+    "lodash.pick": "^4.4.0",
     "lodash.random": "^3.2.0",
     "lodash.remove": "^4.7.0",
     "lodash.shuffle": "^4.2.0",
