--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "semver": "^5.3.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
+    "svgo": "^0.7.2",
     "through2": "^2.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
