Add dependency - lodash.without: ^4.4.0

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "lodash.throttle": "^4.1.1",
     "lodash.times": "^4.3.2",
     "lodash.uniq": "^4.5.0",
+    "lodash.without": "^4.4.0",
     "marked": "^0.3.6",
     "metalsmith-layouts": "^1.7.0",
     "metalsmith-markdown": "^0.2.1",
