--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lodash.constant": "^3.0.0",
     "lodash.every": "^4.6.0",
     "lodash.first": "^3.0.0",
+    "lodash.flatten": "^4.4.0",
     "lodash.identity": "^3.0.0",
     "lodash.isfunction": "^3.0.8",
     "lodash.isnil": "^4.0.0",
