--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "lodash.every": "^4.6.0",
     "lodash.first": "^3.0.0",
     "lodash.flatten": "^4.4.0",
+    "lodash.flow": "^3.5.0",
     "lodash.identity": "^3.0.0",
     "lodash.isfunction": "^3.0.8",
     "lodash.isnil": "^4.0.0",
