--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lodash.clamp": "^4.0.3",
     "lodash.cond": "^4.5.2",
     "lodash.constant": "^3.0.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.every": "^4.6.0",
     "lodash.first": "^3.0.0",
     "lodash.flatten": "^4.4.0",
